<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2D4D7"
    android:backgroundTint="#F0EBA9A9"
    tools:context=".view.CreateEvent">




    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#561C24">

        <TextView
            android:id="@+id/createEventText"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <LinearLayout
            android:layout_width="334dp"
            android:layout_height="560dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.497">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createEventName"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/pickDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#E6D6A7"
                    android:text="Date:" />

                <TextView
                    android:id="@+id/editTextDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="click button to set date"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/pickTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#E6D6A7"
                    android:text="Time:"

                    />

                <TextView
                    android:id="@+id/editTextTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="click button to set time"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createEventLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/description"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/privateText"
                    android:layout_width="142dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Public"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp" />


                <Switch
                    android:id="@+id/publicPrivateSwitch1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#E6D6A7"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/publicText"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Private"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/createEventAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E6D6A7"
                    android:text="Create Event" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6D6A7"
            android:text="@string/u2302"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6D6A7"
            android:text="@string/u2b05"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.978" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E6D6A7"
            android:text="@string/u2699"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>